feat(client): add client config to use react on the same project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
     "outDir": "dist",
     "rootDir": "src",
+    "jsx": "react-jsx"
     //"allowImportingTsExtensions": true,
-  }
-}
+  },
+  "include": ["src"]
+ }
