--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev:client": "vite",
+    "build:client": "vite build",
+    "dev:server": "tsx watch src/server/server.ts",
+    "dev": "concurrently \"vite\" \"tsx watch src/server/server.ts\"",
     "start": "node dist/server.js",
     "build": "tsc",
     "test": "vitest"
@@ -16,9 +19,16 @@
   "devDependencies": {
     "@types/node": "^22.15.17",
     "@types/ws": "^8.18.1",
+    "concurrently": "^9.1.2",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "vitest": "^3.1.3",
     "ws": "^8.18.2"
+  },
+  "dependencies": {
+    "@vitejs/plugin-react": "^4.4.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "vite": "^6.3.5"
   }
 }
