--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "type": "module",
   "devDependencies": {
     "@types/node": "^22.15.17",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
     "@types/ws": "^8.18.1",
     "concurrently": "^9.1.2",
     "tsx": "^4.19.4",
